force-app/main/default/objects/InsuranceBond__c/InsuranceBond__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Insurance &amp; Bond</label>
    <nameField>
        <displayFormat>IB-{00000}</displayFormat>
        <label>Insurance / Bond Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance &amp; Bonds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>