force-app/main/default/objects/InsuranceBond__c/fields/ALIASModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>ALIASModifiedBy__c</fullName>
    <label>ALIAS Modified By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>