force-app/main/default/objects/InsuranceBond__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Insurance &amp; Bonds</relationshipLabel>
    <relationshipName>Insurance_Bonds</relationshipName>
    <type>Lookup</type>
</CustomField>