force-app/main/default/objects/InsuranceBond__c/fields/CancelDate__c.field-meta.xml
<CustomField>
    <fullName>CancelDate__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Cancel Date</label>
    <type>Date</type>
</CustomField>