force-app/main/default/objects/InsuranceBond__c/fields/CurrentGapInInsurance__c.field-meta.xml
<CustomField>
    <fullName>CurrentGapInInsurance__c</fullName>
    <description>PacPoint-KN081519 - Created for PVL Phase 1</description>
    <label>Current Gap In Insurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>