force-app/main/default/objects/InsuranceBond__c/fields/DesignatedSignatory__c.field-meta.xml
<CustomField>
    <fullName>DesignatedSignatory__c</fullName>
    <description>PacPoint-KN081519 - Created for PVL Phase 1</description>
    <label>Designated Signatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>