force-app/main/default/objects/InsuranceBond__c/fields/fxLicenseEffectiveExpireDate__c.field-meta.xml
<CustomField>
    <fullName>fxLicenseEffectiveExpireDate__c</fullName>
    <formula>License__r.EffectiveExpireDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Effective Expire Date</label>
    <type>Date</type>
</CustomField>