force-app/main/default/objects/InsuranceBond__c/fields/HasPendingInsurance__c.field-meta.xml
<CustomField>
    <fullName>HasPendingInsurance__c</fullName>
    <description>PacPoint-AZ23042020</description>
    <formula>License__r.fxHasPendingInsurance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Pending Insurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>