force-app/main/default/objects/InsuranceBond__c/fields/Historical__c.field-meta.xml
<CustomField>
    <fullName>Historical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT040620 - Created for PVL phase 1</description>
    <label>Historical</label>
    <type>Checkbox</type>
</CustomField>