force-app/main/default/objects/InsuranceBond__c/fields/INSAbouttoExpire__c.field-meta.xml
<CustomField>
    <fullName>INSAbouttoExpire__c</fullName>
    <description>PacPoint-KN12162020</description>
    <formula>IF(
AND(
NumberofDaysUntilExpiration__c &lt;  License__r.LicenseType__r.NumberOfDaysPriorToInsExpNotice__c,
 NumberofDaysUntilExpiration__c &lt;&gt; 0),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>INS/Bond About To Expire</label>
    <type>Checkbox</type>
</CustomField>