force-app/main/default/objects/InsuranceBond__c/fields/InsuranceDeductible__c.field-meta.xml
<CustomField>
    <fullName>InsuranceDeductible__c</fullName>
    <description>Pac Point-DN05012020 - Created for PVL Sprint 3 Phase 1</description>
    <label>Insurance Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>