force-app/main/default/objects/InsuranceBond__c/fields/IsValid__c.field-meta.xml
<CustomField>
    <fullName>IsValid__c</fullName>
    <description>Used to identify if the Insurance bond is valid:
(InsuranceBond__c.TermDate__c OR CancelDate__c &gt; License__c.Effective Expire Date

 OR InsuranceBond__c.TermDate__c OR CancelDate__c is NULL)</description>
    <formula>false</formula>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>