force-app/main/default/objects/InsuranceBond__c/fields/LastMaintenanceNoticeSent__c.field-meta.xml
<CustomField>
    <fullName>LastMaintenanceNoticeSent__c</fullName>
    <description>PacPoint-FT040620 - Created for PVL phase 1</description>
    <label>Last Maintenance Notice Sent</label>
    <type>Date</type>
</CustomField>