force-app/main/default/objects/InsuranceBond__c/fields/LicenseLossCheck__c.field-meta.xml
<CustomField>
    <fullName>LicenseLossCheck__c</fullName>
    <formula>License__r.LossofBond__c || License__r.LossOfLiability__c || License__r.LossofWorkersComp__c</formula>
    <label>License Loss Check</label>
    <type>Checkbox</type>
</CustomField>