force-app/main/default/objects/InsuranceBond__c/fields/LicenseStatus__c.field-meta.xml
<CustomField>
    <fullName>LicenseStatus__c</fullName>
    <description>Used to populate license status</description>
    <formula>Text(License__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Status</label>
    <type>Text</type>
</CustomField>