force-app/main/default/objects/InsuranceBond__c/fields/MostRecentExpireInsurance__c.field-meta.xml
<CustomField>
    <fullName>MostRecentExpireInsurance__c</fullName>
    <formula>IF(
OR(
 CancelDate__c = ( License__r.Ins_Expire_Cancel_Date__c - 1),
 TermDate__c = ( License__r.Ins_Expire_Cancel_Date__c - 1)),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Expire Insurance</label>
    <type>Checkbox</type>
</CustomField>