force-app/main/default/objects/InsuranceBond__c/fields/NoticeType__c.field-meta.xml
<CustomField>
    <fullName>NoticeType__c</fullName>
    <description>PacPoint-FT040620 - Created for PVL phase 1</description>
    <label>Notice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - APPROVED</fullName>
            </value>
            <value>
                <fullName>AA - RESTORATION/REACTIVATION NOTICE</fullName>
            </value>
            <value>
                <fullName>AB - BOND WAIVER NOTICE</fullName>
            </value>
            <value>
                <fullName>AC - ADDITIONAL CLASSIFICATION NOTICE</fullName>
            </value>
            <value>
                <fullName>AD - DEFICIENCY NOTICE</fullName>
            </value>
            <value>
                <fullName>AE - EDUCATION WAIVER</fullName>
            </value>
            <value>
                <fullName>AF - WAIVER OF CONDITIONAL LICENSE NOTICE</fullName>
            </value>
            <value>
                <fullName>AG - APPRENTICE REGISTRATION</fullName>
            </value>
            <value>
                <fullName>AI - REAL ESTATE INACTIVE NOTICE</fullName>
            </value>
            <value>
                <fullName>AJ - REJECTION NOTICE</fullName>
            </value>
            <value>
                <fullName>AK - APPLICATION BOUNCED CHECK LETTER</fullName>
            </value>
            <value>
                <fullName>AL - NOTICE OF LICENSURE</fullName>
            </value>
            <value>
                <fullName>AM - EXAM NOTICE</fullName>
            </value>
            <value>
                <fullName>AN - ADDITIONAL REQUIREMENTS NOTICE</fullName>
            </value>
            <value>
                <fullName>AO - NOTICE OF APPROVAL - RELOCATION</fullName>
            </value>
            <value>
                <fullName>AP - PRE-ASSIGNED LICENSE NUMBER LETTER</fullName>
            </value>
            <value>
                <fullName>AQ - NOTICE OF APPROVAL - SPECIAL PRIVILEGE</fullName>
            </value>
            <value>
                <fullName>AR - APPLICATION RECEIPT NOTICE</fullName>
            </value>
            <value>
                <fullName>AS - NOTICE OF APPROVAL - SOLE PROPRIETOR</fullName>
            </value>
            <value>
                <fullName>AT - TEMPORARY PERMIT</fullName>
            </value>
            <value>
                <fullName>AU - EXAM POSTPONEMENT--APPROVED</fullName>
            </value>
            <value>
                <fullName>AV - EXAM POSTPONEMENT--DENIED</fullName>
            </value>
            <value>
                <fullName>AW - WITHDRAWAL--GENERAL</fullName>
            </value>
            <value>
                <fullName>AX - EXPERIENCE CERTIFICATE</fullName>
            </value>
            <value>
                <fullName>AY - WITHDRAWAL FROM EXAM--APPROVED</fullName>
            </value>
            <value>
                <fullName>AZ - WITHDRAWAL FROM EXAM--DENIED</fullName>
            </value>
            <value>
                <fullName>B - POCKET ID &amp; WALL CERTIFICATE</fullName>
            </value>
            <value>
                <fullName>BG - BOUNCED CHECK - GENERIC</fullName>
            </value>
            <value>
                <fullName>BN - BOUNCED CHECK - NEW LICENSEE</fullName>
            </value>
            <value>
                <fullName>BR - BOUNCED CHECK - RENEWALS/RESTORATIONS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>