force-app/main/default/objects/InsuranceBond__c/fields/NumberofDaysUntilExpiration__c.field-meta.xml
<CustomField>
    <fullName>NumberofDaysUntilExpiration__c</fullName>
    <description>PacPoint-KN081519 - Created for PVL Phase 1</description>
    <formula>IF(
(OR((TODAY() - CancelDate__c ) &gt;0,(TODAY() - TermDate__c) &gt;0)), 
0,
(BLANKVALUE(CancelDate__c, TermDate__c) - TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days Until Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>