force-app/main/default/objects/InsuranceBond__c/fields/PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumber__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>