force-app/main/default/objects/InsuranceBond__c/fields/PolicyNumberPublic__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumberPublic__c</fullName>
    <formula>IF(


OR(
 License__r.LicenseType__r.Name = &quot;TAR&quot;,
 License__r.LicenseType__r.Name = &quot;AD&quot;
), 



&quot;NOT PUBLIC&quot;, 


PolicyNumber__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Number Public</label>
    <type>Text</type>
</CustomField>