force-app/main/default/objects/InsuranceBond__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>