force-app/main/default/objects/InsuranceBond__c/fields/SendINSBondReminderNotice__c.field-meta.xml
<CustomField>
    <fullName>SendINSBondReminderNotice__c</fullName>
    <description>PacPoint-KN07142020-Created for PVL Phase 1 Sprint 6</description>
    <formula>If(BLANKVALUE(TermDate__c, CancelDate__c) &gt; BLANKVALUE(CancelDate__c, TermDate__c)
, BLANKVALUE(CancelDate__c, TermDate__c), BLANKVALUE(TermDate__c, CancelDate__c))  -  License__r.LicenseType__r.NumberOfDaysPriorToInsExpNotice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send INS/Bond Reminder Notice</label>
    <type>Date</type>
</CustomField>