force-app/main/default/objects/InsuranceBond__c/fields/SendNotice__c.field-meta.xml
<CustomField>
    <fullName>SendNotice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN07172020-Created for PVL Phase 1 Sprint 6</description>
    <inlineHelpText>Used for Insurance Notices</inlineHelpText>
    <label>Send Notice</label>
    <type>Checkbox</type>
</CustomField>