force-app/main/default/objects/InsuranceBond__c/fields/Surety__c.field-meta.xml
<CustomField>
    <fullName>Surety__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Surety</label>
    <length>255</length>
    <type>Text</type>
</CustomField>