force-app/main/default/objects/InsuranceBond__c/fields/TermDate__c.field-meta.xml
<CustomField>
    <fullName>TermDate__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Term Date</label>
    <type>Date</type>
</CustomField>