force-app/main/default/objects/InsuranceBond__c/fields/TransactionCode__c.field-meta.xml
<CustomField>
    <fullName>TransactionCode__c</fullName>
    <label>Transaction Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CANC - Cancellation</fullName>
            </value>
            <value>
                <fullName>CHG - Change Of Current Policy</fullName>
            </value>
            <value>
                <fullName>MISC - Miscellaneous Transaction</fullName>
            </value>
            <value>
                <fullName>REIN - Reinstated</fullName>
            </value>
            <value>
                <fullName>CONT - Continuation Certificate</fullName>
            </value>
            <value>
                <fullName>NEW - New Bond/Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>