force-app/main/default/objects/InsuranceBond__c/fields/VisibleToLicensee__c.field-meta.xml
<CustomField>
    <fullName>VisibleToLicensee__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Is this is checked, the Insurance / Bond record will be visible to the Licensee when logged into the PVL Portal.</inlineHelpText>
    <label>Visible To Licensee</label>
    <type>Checkbox</type>
</CustomField>