force-app/main/default/objects/InsuranceBond__c/fields/VisibleToPublic__c.field-meta.xml
<CustomField>
    <fullName>VisibleToPublic__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If this is checked, the Insurance / Bond record will be visible in public searches.</inlineHelpText>
    <label>Visible To Public</label>
    <type>Checkbox</type>
</CustomField>